--- a/index.html
+++ b/index.html
@@ -16,21 +16,27 @@
       <li>E-mail: Genbarra929@aol.com</li>
     </ul>
   <h4>Education</h4>
-  <p></p>
-  <p></p>
+  <p>University of Maryland <span>December 2016</span></p>
+  <p>Bachelors of Science, Information Systems <span>College Park, MD</span></p>
+  <p>Robert H. Smith School of Business <span>GPA: 3.20</span></p>
+  <p>Montgomery College <span>December 2013</span></p>
+  <p>Associates Degree, Business <span>Rockville, MD</span></p>
+  <p><span>GPA: 3.50</span></p>
+
+
   <hr>
   <h4>Experience</h4>
   <hr>
-  <p>Lenscrafters Wheaton, MD</p>
-  <p><em>Lab Technician</em> 2/13 - 11/13</p>
+  <p>Lenscrafters <span>Wheaton, MD</span></p>
+  <p><em>Lab Technician</em> <span>2/13 - 11/13</span></p>
   <ul>
     <li>Expedited the eyewear production process by achieving the guaranteed one-hour glasses promise</li>
     <li>Developed communication skills through fixing customer’s eyewear, interacting with customers, and providing
 timely reports of the current stage of a customer’s eyewear to coworkers </li>
     <li>Multi-tasked under pressure transporting multiple orders through the production process</li>
   </ul>
-  <p>Harris Teeter North Bethesa</p>
-  <p><em>Produce Clerk</em> 05/16 – 04/18</p>
+  <p>Harris Teeter <span>North Bethesa</span></p>
+  <p><em>Produce Clerk</em> <span>05/16 – 04/18</span></p>
   <ul>
     <li>Delivered superb customer service by locating specific produce in department for customers and providing
 product information to customers</li>
