--- a/index.html
+++ b/index.html
@@ -8,14 +8,25 @@
   <title>Document</title>
 </head>
 <body>
-  <div>
-    <h2>Gene Barra</h2>
-    <ul>
-      <li>3300 Random Street </li>
-      <li>Water Spring CO, 80202</li>
-      <li>Phone: (202)-946-6543</li>
-      <li>E-mail: Genbarra929@aol.com</li>
-    </ul>
+  <div class="resume-body">
+    <section class="resume-header">
+      <h2 class="resume-name">Gene Barra</h2>
+      <ul>
+        <li class="address-street">3300 Random Street <span class="area">Water Spring CO, 80202</span></li>
+        <li class="phone">Phone: (202)-946-6543 <span class="email">E-mail: Genbarra929@aol.com</span></li>
+
+      </ul>
+    </section>
+<section class="education">
+
+</section>
+<section class="experience">
+
+</section>
+<section class="skills">
+
+</section>
+
   <h4>Education</h4>
   <hr>
   <p>University of Maryland <span>December 2016</span></p>
