finished resume header section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="resume-body">
     <section class="resume-header">
       <h2 class="resume-name">Gene Barra</h2>
-      <ul>
+      <ul class="header-list">
         <li class="address-street">3300 Random Street <span class="area">Water Spring CO, 80202</span></li>
         <li class="phone">Phone: (202)-946-6543 <span class="email">E-mail: Genbarra929@aol.com</span></li>
 
