--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
@@ -18,50 +19,49 @@
       </ul>
     </section>
 <section class="education">
-
+  <h4>Education</h4>
+  <hr class="bold">
+  <p>University of Maryland <span class="right-alignment">December 2016</span></p>
+  <p>Bachelors of Science, Information Systems <span class="right-alignment">College Park, MD</span></p>
+  <p>Robert H. Smith School of Business <span class="right-alignment">GPA: 3.20</span></p>
+  <p>Montgomery College <span class="right-alignment">December 2013</span></p>
+  <p>Associates Degree, Business <span class="right-alignment">Rockville, MD</span></p>
+  <p><span class="right-alignment">GPA: 3.50</span></p>
 </section>
 <section class="experience">
-
-</section>
-<section class="skills">
-
-</section>
-
-  <h4>Education</h4>
-  <hr>
-  <p>University of Maryland <span>December 2016</span></p>
-  <p>Bachelors of Science, Information Systems <span>College Park, MD</span></p>
-  <p>Robert H. Smith School of Business <span>GPA: 3.20</span></p>
-  <p>Montgomery College <span>December 2013</span></p>
-  <p>Associates Degree, Business <span>Rockville, MD</span></p>
-  <p><span>GPA: 3.50</span></p>
-
   <h4>Experience</h4>
-  <hr>
+  <hr class="bold">
   <p>Lenscrafters <span>Wheaton, MD</span></p>
   <p><em>Lab Technician</em> <span>2/13 - 11/13</span></p>
   <ul>
-    <li>Expedited the eyewear production process by achieving the guaranteed one-hour glasses promise</li>
-    <li>Developed communication skills through fixing customer’s eyewear, interacting with customers, and providing
+    <li class="desc">Expedited the eyewear production process by achieving the guaranteed one-hour glasses promise</li>
+    <li class="desc">Developed communication skills through fixing customer’s eyewear, interacting with customers, and providing
 timely reports of the current stage of a customer’s eyewear to coworkers </li>
-    <li>Multi-tasked under pressure transporting multiple orders through the production process</li>
+    <li class="desc">Multi-tasked under pressure transporting multiple orders through the production process</li>
   </ul>
   <p>Harris Teeter <span>North Bethesa</span></p>
   <p><em>Produce Clerk</em> <span>05/16 – 04/18</span></p>
   <ul>
-    <li>Delivered superb customer service by locating specific produce in department for customers and providing
+    <li class="desc">Delivered superb customer service by locating specific produce in department for customers and providing
 product information to customers</li>
-    <li>Resolved customer conflict by closely listening to problems, formulating possible solutions and deciding on an
+    <li class="desc">Resolved customer conflict by closely listening to problems, formulating possible solutions and deciding on an
 optimal solution</li>
-    <li>Collaborated with associates to transfer produce from the truck to the cooler and to the sales floor in order to
+    <li class="desc">Collaborated with associates to transfer produce from the truck to the cooler and to the sales floor in order to
 increase shelf life of produce and to increase sales</li>
-    <li>Inspected and maintained the quality of produce items in the department</li>
+    <li class="desc">Inspected and maintained the quality of produce items in the department</li>
   </ul>
+</section>
+<section class="skills">
   <h4>Skills</h4>
-  <hr>
+  <hr class="bold">
   <p><em>Programming / Languages:</em> : HTML, CSS, CSS Frameworks (Materialize and Bootstrap), Sass, JavaScript, jQuery</p>
   <p><em>Other Technologies:</em>Microsoft Office, Build tools (NPM and Gulp), Git (version control)</p>
   <p><em>Github: </em>  https://github.com/Gbarra9</p>
-  </div>
+
+</section>
+
+</div>
+
+
 </body>
 </html>
