--- a/index.html
+++ b/index.html
@@ -21,35 +21,68 @@
 <section class="education">
   <h4>Education</h4>
   <hr class="bold">
-  <p>University of Maryland <span class="right-alignment">December 2016</span></p>
-  <p>Bachelors of Science, Information Systems <span class="right-alignment">College Park, MD</span></p>
-  <p>Robert H. Smith School of Business <span class="right-alignment">GPA: 3.20</span></p>
-  <p>Montgomery College <span class="right-alignment">December 2013</span></p>
-  <p>Associates Degree, Business <span class="right-alignment">Rockville, MD</span></p>
-  <p><span class="right-alignment">GPA: 3.50</span></p>
+  <div class="education-content">
+  <div class="college-1">
+    <p>University of Maryland </p>
+    <p>Bachelors of Science, Information Systems </p>
+    <p>Robert H. Smith School of Business </p>
+  </div>
+  <div class="college-2">
+    <p>Montgomery College </p>
+    <p>Associates Degree, Business </p>
+  </div>
+
+  </div>
+  <div class="extra-info">
+  <div class="extra-info-1">
+    <p>December 2016</p>
+    <p>College Park, MD</p>
+    <p>GPA: 3.20</p>
+  </div>
+
+  <div class="extra-info-2">
+
+      <p>Rockville, MD</p>
+      <p>December 2013</p>
+      <p>GPA: 3.50</p>
+
+  </div>
+
+
+</div>
 </section>
 <section class="experience">
   <h4>Experience</h4>
   <hr class="bold">
-  <p>Lenscrafters <span>Wheaton, MD</span></p>
-  <p><em>Lab Technician</em> <span>2/13 - 11/13</span></p>
-  <ul>
-    <li class="desc">Expedited the eyewear production process by achieving the guaranteed one-hour glasses promise</li>
-    <li class="desc">Developed communication skills through fixing customer’s eyewear, interacting with customers, and providing
-timely reports of the current stage of a customer’s eyewear to coworkers </li>
-    <li class="desc">Multi-tasked under pressure transporting multiple orders through the production process</li>
-  </ul>
-  <p>Harris Teeter <span>North Bethesa</span></p>
-  <p><em>Produce Clerk</em> <span>05/16 – 04/18</span></p>
-  <ul>
-    <li class="desc">Delivered superb customer service by locating specific produce in department for customers and providing
-product information to customers</li>
-    <li class="desc">Resolved customer conflict by closely listening to problems, formulating possible solutions and deciding on an
-optimal solution</li>
-    <li class="desc">Collaborated with associates to transfer produce from the truck to the cooler and to the sales floor in order to
-increase shelf life of produce and to increase sales</li>
-    <li class="desc">Inspected and maintained the quality of produce items in the department</li>
-  </ul>
+  <div class="work">
+    <div class="work-1">
+      <p >Lenscrafters</p>
+      <p><em>Lab Technician</em> </p>
+      <p>Wheaton, MD</p>
+      <p>2/13 - 11/13</p>
+      <ul class="work-desc">
+        <li class="desc">Expedited the eyewear production process by achieving the guaranteed one-hour glasses promise</li>
+        <li class="desc">Developed communication skills through fixing customer’s eyewear, interacting with customers, and providing
+    timely reports of the current stage of a customer’s eyewear to coworkers </li>
+        <li class="desc">Multi-tasked under pressure transporting multiple orders through the production process</li>
+      </ul>
+    </div>
+  <div class="work-2">
+    <p>Harris Teeter </p>
+    <p><em>Produce Clerk</em></p>
+    <p>North Bethesa</p>
+    <p>05/16 – 04/18</p>
+    <ul class="work-desc">
+      <li class="desc">Delivered superb customer service by locating specific produce in department for customers and providing
+  product information to customers</li>
+      <li class="desc">Resolved customer conflict by closely listening to problems, formulating possible solutions and deciding on an
+  optimal solution</li>
+      <li class="desc">Collaborated with associates to transfer produce from the truck to the cooler and to the sales floor in order to
+  increase shelf life of produce and to increase sales</li>
+      <li class="desc">Inspected and maintained the quality of produce items in the department</li>
+    </ul>
+  </div>
+    </div>
 </section>
 <section class="skills">
   <h4>Skills</h4>
