--- a/index.html
+++ b/index.html
@@ -56,22 +56,37 @@
   <hr class="bold">
   <div class="work">
     <div class="work-1">
-      <p >Lenscrafters</p>
-      <p><em>Lab Technician</em> </p>
-      <p>Wheaton, MD</p>
-      <p>2/13 - 11/13</p>
+      <div class="work-1-info">
+        <p >Lenscrafters</p>
+        <p>Lab Technician </p>
+      </div>
+      <div class="work-1-info-extra">
+        <p>Wheaton, MD</p>
+        <p class="bold-date">2/13 - 11/13</p>
+      </div>
+
+    <div class="work-1-tasks">
       <ul class="work-desc">
         <li class="desc">Expedited the eyewear production process by achieving the guaranteed one-hour glasses promise</li>
-        <li class="desc">Developed communication skills through fixing customer’s eyewear, interacting with customers, and providing
-    timely reports of the current stage of a customer’s eyewear to coworkers </li>
+        <li class="desc">Developed communication skills through fixing customer’s eyewear, interacting with customers, and <span>providing
+    timely reports of the current stage of a customer’s eyewear to coworkers</span> </li>
         <li class="desc">Multi-tasked under pressure transporting multiple orders through the production process</li>
       </ul>
     </div>
+
+    </div>
   <div class="work-2">
-    <p>Harris Teeter </p>
-    <p><em>Produce Clerk</em></p>
-    <p>North Bethesa</p>
-    <p>05/16 – 04/18</p>
+    <div class="work-2-info">
+      <p>Harris Teeter </p>
+      <p>Produce Clerk</p>
+    </div>
+    <div class="work-2-info-extra">
+      <p>North Bethesa</p>
+      <p class="bold-date">05/16 – 04/18</p>
+    </div>
+
+  </div>
+  <div class="work-2-tasks">
     <ul class="work-desc">
       <li class="desc">Delivered superb customer service by locating specific produce in department for customers and providing
   product information to customers</li>
@@ -82,6 +97,7 @@
       <li class="desc">Inspected and maintained the quality of produce items in the department</li>
     </ul>
   </div>
+
     </div>
 </section>
 <section class="skills">
