--- a/index.html
+++ b/index.html
@@ -81,11 +81,12 @@
       <p>Produce Clerk</p>
     </div>
     <div class="work-2-info-extra">
-      <p>North Bethesa</p>
+      <p>North Bethesda</p>
       <p class="bold-date">05/16 – 04/18</p>
     </div>
 
   </div>
+
   <div class="work-2-tasks">
     <ul class="work-desc">
       <li class="desc">Delivered superb customer service by locating specific produce in department for customers and providing
@@ -103,9 +104,11 @@
 <section class="skills">
   <h4>Skills</h4>
   <hr class="bold">
-  <p><em>Programming / Languages:</em> : HTML, CSS, CSS Frameworks (Materialize and Bootstrap), Sass, JavaScript, jQuery</p>
-  <p><em>Other Technologies:</em>Microsoft Office, Build tools (NPM and Gulp), Git (version control)</p>
-  <p><em>Github: </em>  https://github.com/Gbarra9</p>
+  <div class="skillset">
+    <p><span class="bold-skill">Programming / Languages: </span>HTML, CSS, CSS Frameworks (Materialize and Bootstrap), Sass, JavaScript, jQuery</p>
+    <p><span class="bold-skill">Other Technologies: </span>Microsoft Office, Build tools (NPM and Gulp), Git (version control)</p>
+    <p><span class="bold-skill">Github: </span>  https://github.com/Gbarra9</p>
+  </div>
 
 </section>
 
