fix some errors

--- a/index.html
+++ b/index.html
@@ -54,17 +54,19 @@
 <section class="experience">
   <h4>Experience</h4>
   <hr class="bold">
+
   <div class="work">
     <div class="work-1">
       <div class="work-1-info">
         <p >Lenscrafters</p>
-        <p>Lab Technician </p>
+        <p class="job-title">Lab Technician </p>
       </div>
       <div class="work-1-info-extra">
         <p>Wheaton, MD</p>
         <p class="bold-date">2/13 - 11/13</p>
       </div>
 
+    </div>
     <div class="work-1-tasks">
       <ul class="work-desc">
         <li class="desc">Expedited the eyewear production process by achieving the guaranteed one-hour glasses promise</li>
@@ -73,12 +75,10 @@
         <li class="desc">Multi-tasked under pressure transporting multiple orders through the production process</li>
       </ul>
     </div>
-
-    </div>
   <div class="work-2">
     <div class="work-2-info">
       <p>Harris Teeter </p>
-      <p>Produce Clerk</p>
+      <p class="job-title">Produce Clerk</p>
     </div>
     <div class="work-2-info-extra">
       <p>North Bethesda</p>
