--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
   <div class="work">
     <div class="work-1">
       <div class="work-1-info">
-        <p >Lenscrafters</p>
+        <p class="company">Lenscrafters</p>
         <p class="job-title">Lab Technician </p>
       </div>
       <div class="work-1-info-extra">
-        <p>Wheaton, MD</p>
+        <p class="location">Wheaton, MD</p>
         <p class="bold-date">2/13 - 11/13</p>
       </div>
 
@@ -77,11 +77,11 @@
     </div>
   <div class="work-2">
     <div class="work-2-info">
-      <p>Harris Teeter </p>
+      <p class="company">Harris Teeter </p>
       <p class="job-title">Produce Clerk</p>
     </div>
     <div class="work-2-info-extra">
-      <p>North Bethesda</p>
+      <p class="location">North Bethesda</p>
       <p class="bold-date">05/16 – 04/18</p>
     </div>
 
